2013-03-26  6.8.4-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-0, SVN revision 11531.

2013-03-20  6.8.4-0 Cristy  <quetzlzacatenango@image...>
  * Do not write zero-length TIFF tags (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22957).
  * Math library should be private for *.pc.in configuration files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=22986).
  * Do not split words for caption (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=17123).
  * Modify the configure script check for the webp delegate library (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=23025).
  * The -blur, -guassian-blur, and -sharpen are now convenience methods
    for -morphology convolve.
  * Fix infinite loop for 'display -window' (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23028).
  * Revert -auto-level patch to match the results of ImageMagick 6.8.3-4.
  * Revert g_type_init() patch in svg.c (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23035).

2013-03-18  6.8.3-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.3-10, SVN revision 11413.

2013-03-15  6.8.3-10 Glenn Randers-Pehrson <glennrp@image...>
  * Added IM, libpng, and zlib version info to debug output.

2013-03-10  6.8.3-10 Bastien Roucaries  <roucaries.basti...>
  * Move PerlMagick arch independant part to 'default' folder.
  * Move binaries to lib subdirectory and link are created from binary package.

2013-03-10  6.8.3-10 Cristy  <quetzlzacatenango@image...>
  * The TXT image format can now generate output compatible with the
    -sparse-color option (e.g. convert image.png sparse-color:image.txt).
  * Support -intensity option: method to generate an intensity value from a
    pixel.
  * Add -similarity-threshold option to the compare utility, the minimum
    distortion for a (sub)image match.