@@ -1,3 +1,6 @@
+2013-03-26  6.8.4-1 Cristy  <quetzlzacatenango@image...>
+  * Sync 'intensity' option with current image.
+
 2013-03-26  6.8.4-0 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.4-0, SVN revision 11531.
 
